--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>spring-hibernate</artifactId>
             <version>1.2.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
