Register/Login features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=iMeserias
+spring.datasource.url=jdbc:mysql://localhost:3306/iMeserias
+spring.datasource.username=root
+spring.datasource.password=nicu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.web.resources.cache.period=3600
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.strategy.content.enabled=true
