--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 spring.application.name=iMeserias
+
+#DB Settings
 spring.datasource.url=jdbc:mysql://localhost:3306/iMeserias
 spring.datasource.username=root
 spring.datasource.password=nicu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Resources
+spring.web.resources.cache.cachecontrol.max-age=3600
+spring.web.resources.cache.cachecontrol.cache-public=true
 spring.web.resources.cache.period=3600
 spring.web.resources.chain.enabled=true
-spring.web.resources.chain.strategy.content.enabled=true
+
+#Security
+spring.security.user.name=test
+spring.security.user.password=test
+
+#MIME
+spring.mvc.contentnegotiation.media-types.js=application/javascript
+spring.mvc.contentnegotiation.media-types.css=text/css
