--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.security.user.password=test
 #MIME
 spring.mvc.contentnegotiation.media-types.js=application/javascript
 spring.mvc.contentnegotiation.media-types.css=text/css
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
