changed few things

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mvc.contentnegotiation.media-types.css=text/css
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
+
+
+#DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.dinu = DEBUG;
