Last commit- app 90% done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.jpa.show-sql=true
 #DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.dinu = DEBUG;
+
+spring.thymeleaf.cache=false
