--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=iMeserias
 
 #DB Settings
-spring.datasource.url=jdbc:mysql://localhost:3306/iMeserias
-spring.datasource.username=root
-spring.datasource.password=nicu
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Resources
@@ -13,8 +13,8 @@ spring.web.resources.cache.period=3600
 spring.web.resources.chain.enabled=true
 
 #Security
-spring.security.user.name=test
-spring.security.user.password=test
+spring.security.user.name=
+spring.security.user.password=
 
 #MIME
 spring.mvc.contentnegotiation.media-types.js=application/javascript
